--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,7 +51,7 @@ legacy-portal-integration.legacyUrl=
 # keytool -genkeypair -keyalg rsa -keysize 2048 -alias jwtsign -keystore jwtkeystore.jks
 # NB! password for both keystore and alias should be the same
 jwt-integration.signature.key-store=classpath:jwtkeystore.jks
-jwt-integration.signature.key-store-password=ppjjpp
+jwt-integration.signature.key-store-password=
 jwt-integration.signature.keyStoreType=JKS
 jwt-integration.signature.keyAlias=jwtsign
 #Jwt issuer property
